add additional aliases